학습모드,게임모드완료